--- a/package.json
+++ b/package.json
@@ -1,1 +1,32 @@
 
+{
+  "name": "pratise",
+  "version": "0.0.1",
+  "title": "pratise",
+  "homepage": "",
+  "author": "Wright Liang",
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "licenses": "MIT",
+  "description": "为移动端web而生",
+  "bugs": {
+    "url": ""
+  },
+  "devDependencies": {
+    "grunt": "~0.4.0",
+    "grunt-contrib-compress": "*",
+    "grunt-contrib-copy": "*",
+    "grunt-contrib-cssmin": "~0.6.1",
+    "grunt-contrib-watch": "0.4.3",
+    "grunt-contrib-sass": "0.7.0",
+    "grunt-ftp-deploy": "^0.1.4",
+    "grunt-ftpush": "^0.3.3",
+    "grunt-push-svn": "^0.2.1",
+    "grunt-autoprefixer": "^1.0.1",
+    "grunt-shell": "^0.7.0",
+    "grunt-contrib-imagemin":"^0.8.1"
+  },
+  "main": "Gruntfile.js"
+}
